Background & Game Screen Size

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <script type="text/javascript" src="GameScreen.js"></script>
         <!-- the last script to be loaded should be the script that the game starts on -->
         <script type="text/javascript" src="directory.js"></script>
-
+        
+        <link type="text/css" rel="stylesheet" href="game_stylesheet.css">
 	</head>
 
 	<body>
-		<p>This is my game!</p>
-		<div id="gameDiv"></div>
+        <h1><center><i>Color Karma</i></center></h1>
+        <center><div id="gameDiv"></div></center>
 	</body>
 
 </html>
