--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="/assets/phaser.js"></script>
 		<script type="text/javascript" src="TitleScreen.js"></script>
         <script type="text/javascript" src="GameScreen.js"></script>
+		<script type="text/javascript" src="RulesScreen.js"></script>
         <!-- the last script to be loaded should be the script that the game starts on -->
         <script type="text/javascript" src="directory.js"></script>
         
