--- a/rules.html
+++ b/rules.html
@@ -13,7 +13,7 @@
         <center><h1>RULES</h1></center>
         
         <center><div>
-        <p>All players start out with a gamepiece on the first square. Throughout the game, you will interact with 5 different types of squares: Normal, Teleport, Buff, Debuff, and Cripple. The Normal Square is yellow, and as the name suggests is normal, there are no special effects. The Teleport squares are paired, and you can only travel between the pairs. The Buff squares allows you to advance further ahead than a normal roll. Likewise, the Debuff squares either slow your advance or send you back a few steps. Now the Cripple squares are a bit unique in that they have a Debuff effect . . . but on the opponent instead of yourself. What this means is that when you land on the cripple square, you are then able to choose an opponent who will be Debuffed.</p>
+        <p>All players start out with a gamepiece on the first square. Throughout the game, you will interact with 5 different types of squares: Normal, Teleport, Buff, Debuff, and Cripple. As the name suggests, the square is quite normal, so there are no special effects. The Teleport squares are paired, and you can only travel between the pairs. The Buff squares allows you to advance further ahead than a normal roll. Likewise, the Debuff squares either slow your advance or send you back a few steps. Now the Cripple squares are a bit unique in that they have a Debuff effect . . . They allow you to place a Debuff effect on the opponent instead.</p>
         </div></center>
     </body>
 
