--- a/rules.html
+++ b/rules.html
@@ -14,6 +14,11 @@
         
         <center><div>
         <p>All players start out with a gamepiece on the first square. Throughout the game, you will interact with 5 different types of squares: Normal, Teleport, Buff, Debuff, and Cripple. As the name suggests, the square is quite normal, so there are no special effects. The Teleport squares are paired, and you can only travel between the pairs. The Buff squares allows you to advance further ahead than a normal roll. Likewise, the Debuff squares either slow your advance or send you back a few steps. Now the Cripple squares are a bit unique in that they have a Debuff effect . . . They allow you to place a Debuff effect on the opponent instead.</p>
+        <img src = "assets/images/Normal.png" width = 200 height = 200>
+        <img src= "assets/images/Buff.png" width= 200 height = 200>
+        <img src= "assets/images/Debuff.png" width= 200 height = 200>
+        <img src= "assets/images/Cripple.png" width= 200 height = 200>
+        <img src= "assets/images/Teleport0.png" width= 200 height = 200>
         </div></center>
     </body>
 
