--- a/rules.html
+++ b/rules.html
@@ -20,7 +20,7 @@
         <img src= "assets/images/Debuff.png" width= 150 height = 150>
         <img src= "assets/images/Cripple.png" width= 150 height = 150>
         <img src= "assets/images/Teleport0.png" width= 150 height = 150>
-
+        </div></center>
     </body>
 
 </html>
